--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.9.5",
-        "updated": "2026-02-27 15:40:43"
+        "version": "1.10.2",
+        "updated": "2026-02-28 21:20:17"
     },
     "txwelcome": "Добро пожаловать",
     "quotes": [
@@ -141,7 +141,8 @@
     "txgordonssunclock": "Часы Гордона",
     "txsunclock": "Солнечные часы",
     "txpartsupport": "[i]ПРИМЕЧАНИЕ: (β) Этот язык поддерживается частично. Поэтому некоторые разделы на английском. Помощь приветствуется (GitHub). — На последней странице есть кнопка «Автоперевод»[/i]",
-    "txnosupport": "[i]ПРИМЕЧАНИЕ: Ваш язык пока не поддерживается, поэтому отображается английский. На последней странице есть кнопка «Автоперевод»[/i]",
+    "txnosupport": "[i]ПРИМЕЧАНИЕ: Ваш язык (пока) не поддерживается, поэтому отображается английский. На последней странице есть кнопка «Автоперевод»[/i]",
+    "txautotranslate": "[i]ПРИМЕЧАНИЕ: Этот язык (пока) официально не поддерживается. Это автоматический перевод[/i]",
     "uebanleitung": "Инструкция",
     "txanleitung": "[DF]{LANGSUPPORT}1. Установите флажок {txgpsauto}, чтобы автоматически обновлять ваше местоположение во время использования. ({txgpsbutton} однократно определяет текущую позицию и сохраняет её.) На этом пока всё. – Для более высокой точности см. {quotes|0-}4. {txshowagni-}{quotes|1-}.[~LF][~LF]В качестве альтернативы можно ввести название места или адрес в текстовое поле (если устройство поддерживает это) либо координаты (например, 50.94, 6.96). 3-я и 4-я записи необязательны: примерная высота &bl;m], примерная температура в сумерках &bl;°C]. Затем установите флажок {txwelcomescr}. – При изменении базовых данных {txsunclock-} выполняет суточный расчёт, который в зависимости от устройства может длиться от 1[NDASH]30 секунд.[~LF][~LF]2. {txshowclock} отображает цифровые часы в правом верхнем углу циферблата. {txuhrsinn} определяет, вращаются ли часы по часовой стрелке (юг) или против неё: при смене направления вращения часть солнечного круга, находящаяся под горизонтом, оказывается перед вами (подробности см. на следующей странице).",
     "txmore": "[DF]3. {txnachtmodus} {txlangarr|auto-} переключается на закате, при −6° до конца сумерек, +6° до них. {txfarben} выбирает различные циферблаты.[~LF][~LF]4. {txfullscr} предотвращает выключение экрана и включает полноэкранный режим. {txweathapi} накладывает прогноз погоды на часы (см. ниже, требуется сеть). {txagnihotra} показывает метки для солнечного указателя, а также время следующего нулевого прохождения Солнца & обратный отсчёт. За шесть минут до Агнихотры изображение увеличивается и отображаются секунды (⁺ = GPS актуален). – Если настройки не были применены, нажмите кнопку обновления в правом нижнем углу циферблата.[~LF][~LF]Вы можете увеличивать циферблат двумя пальцами (или тройным касанием). Чтобы перемещать увеличенное изображение, делайте это медленно. Быстрые движения перелистывают на следующую страницу. – На следующей странице приведено объяснение циферблата.[DF]",
