--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.9.5",
-        "updated": "2026-02-27 15:40:43"
+        "version": "1.10.2",
+        "updated": "2026-02-28 21:20:17"
     },
     "txwelcome": "欢迎",
     "quotes": [
@@ -153,6 +153,7 @@
     "txsunclock": "太阳时钟",
     "txpartsupport": "[i]注意：(β) 此语言仅提供部分支持。因此，部分内容为英文。欢迎提供支持（Github）。- 在最后一页，您会看到一个“自动翻译”按钮[/i]",
     "txnosupport": "[i]注意：您的语言尚未翻译。在最后一页，您会看到一个“自动翻译”按钮[/i]",
+    "txautotranslate": "[i]提示：此语言（尚未）得到官方支持。此为自动翻译[/i]",
     "uebanleitung": "说明",
     "txanleitung": "[DF]{LANGSUPPORT}1. 勾选 {txgpsauto}，以在使用期间自动更新您的位置。({txgpsbutton} 会一次性确定并保存当前坐标。) 目前不需要更多设置。– 如需更高精度，请参见 {quotes|0-}4. {txshowagni-}{quotes|1-}.[~LF][~LF]或者，您也可以在文本框中输入地名或地址（如果设备支持），或直接输入坐标（例如 50.94, 6.96）。第 3 和第 4 项为可选：大致海拔 &bl;m]，黄昏时的大致温度 &bl;°C]。随后勾选 {txwelcomescr}。– 当基础数据发生变化时，{txsunclock-} 会执行一次日计算，根据设备不同可能需要 1[NDASH]30 秒。[~LF][~LF]2. {txshowclock} 会在表盘右上角显示数字时钟。{txuhrsinn} 用于设置时钟是顺时针（南方）还是逆时针运行：当改变旋转方向时，位于地平线以下的太阳圆环部分会显示在您面前（详见下一页）。",
     "txmore": "[DF]3. {txnachtmodus} {txlangarr|auto-} 在日落时切换，在 −6° 到暮光结束之间，以及其前 +6°。{txfarben} 用于选择不同的表盘。[~LF][~LF]4. {txfullscr} 防止屏幕关闭并切换到全屏模式。{txweathapi} 在时钟上叠加天气预报（见下文，需要网络）。{txagnihotra} 显示太阳指针的标记，以及下一次太阳零点通过的时间 & 倒计时。Agnihotra 前 6 分钟，显示会放大并显示秒数（⁺ = GPS 为当前）。– 如果设置未被应用，请点击表盘右下角的刷新按钮。[~LF][~LF]您可以用两根手指放大表盘（或三次点击）。如需移动放大的图像，请缓慢操作。快速滑动会切换到下一页。– 下一页包含表盘的详细说明。[DF]",
