--- a/lang/de.json
+++ b/lang/de.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.9.5",
-        "updated": "2026-02-27 15:40:43"
+        "version": "1.10.2",
+        "updated": "2026-02-28 21:20:17"
     },
     "txwelcome": "Willkommen",
     "quotes": [
@@ -139,7 +139,8 @@
     "txgordonssunclock": "Gordons Sonnenuhr",
     "txsunclock": "Sonnenuhr",
     "txpartsupport": "[i]HINWEIS: (β) Diese Sprache ist nur teilweise unterstützt. Daher sind einige Abschnitte auf Englisch. Unterstützung ist willkommen (Github). - Auf der letzten Seite finden Sie einen Knopf [ref=autotr][u]„Auto-Übersetzung“[/u][/ref][/i]",
-    "txnosupport": "[i]HINWEIS: Ihre Sprache wird noch nicht unterstützt, daher wird Englisch angezeigt. Auf der letzten Seite finden Sie einen Knopf [ref=autotr][u]„Auto-Übersetzung“[/u][/ref][/i]",
+    "txnosupport": "[i]HINWEIS: Ihre Sprache wird (noch) nicht unterstützt, daher wird Englisch angezeigt. Auf der letzten Seite finden Sie einen Knopf [ref=autotr][u]„Auto-Übersetzung“[/u][/ref][/i]",
+    "txautotranslate": "[i]HINWEIS: Diese Sprache wird (noch) nicht offiziell unterstützt. Dies ist eine automatische Übersetzung[/i]",
     "uebanleitung": "Anleitung",
     "txanleitung": "[DF]{LANGSUPPORT}1. Setzen Sie das Häkchen bei {txgpsauto}, um Ihren Standort während der Nutzung automatisch zu aktualisieren. ({txgpsbutton} bestimmt Ihre aktuelle Position einmalig und übernimmt diese fest.) Mehr ist erst einmal nicht nötig. - Für höhere Genauigkeit s. {quotes|0-}4. {txshowagni-}{quotes|1-}.[~LF][~LF]Alternativ können Sie einen Ortsnamen oder eine Adresse in das Textfeld eingeben (wenn Ihr Gerät dies unterstützt) oder Koordinaten (z.B. 50.94, 6.96). Ein 3. und 4. Eintrag sind optional: die grobe Höhe &bl;m], die ungefähre Temperatur bei Dämmerung &bl;°C]. Anschließend setzen Sie das Häkchen bei {txwelcomescr}. - Bei Änderungen grundlegender Daten führt {txsunclock-} eine Tagesberechnung durch, die je nach Gerät zwischen 1[NDASH]30 Sekunden dauern kann.[~LF][~LF]2. {txshowclock} blendet oben rechts auf dem Ziffernblatt eine Digitaluhr ein. {txuhrsinn} legt fest, ob die Uhr im Uhrzeigersinn läuft (Süden) oder dagegen: Wenn Sie die Drehrichtung ändern, liegt der unter dem Horizont liegende Teil des Sonnenkreises vor Ihnen (Details s. nächste Seite).",
     "txmore": "[DF]3. {txnachtmodus} {txlangarr|auto-} wechselt bei Sonnenuntergang, -6° zum Ende der Dämmerung, +6° davor. {txfarben} wählt verschiedene Ziffernblätter.[~LF][~LF]4. {txfullscr} verhindert das Ausschalten des Bildschirms und schaltet auf Vollbild. {txweathapi} blendet eine Vorhersage auf der Uhr ein (s.u., Netz notwendig). {txagnihotra} zeigt Markierungen für den Sonnenzeiger sowie die Zeit des nächsten Nulldurchlaufs der Sonne & Countdown. Sechs Minuten vor Agnihotra wird die Anzeige vergrößert und Sekunden eingeblendet (⁺ = GPS aktuell). - Falls Ihre Einstellungen einmal nicht übernommen werden, tippen Sie auf dem Ziffernblatt auf den Aktualisierungsknopf unten rechts.[~LF][~LF]In das Ziffernblatt können Sie mit zwei Fingern hineinzoomen (oder mit Dreifachtipp). Wenn Sie das gezoomte Bild verschieben wollen, machen Sie es langsam. Schnelle Bewegungen wischen zur nächsten Seite. - Auf der nächsten Seite finden Sie eine Erklärung des Ziffernblatts.[DF]",
